# joint-entity-relation

./: README.md
joint_entity_relation/: readme
joint_entity_relation/compile/: CMakeLists.txt  command.txt
joint_entity_relation/compile/lstmsdparser/: CMakeLists.txt  c2.h  layers.cc  layers.h  listbased.cc  listbased.h  lstm_sdparser.cpp  lstm_sdparser.h  main.cpp  swapbased.cc  swapbased.h  system.h  theirtreelstm.cc  theirtreelstm.h
joint_entity_relation/data/: example.txt  glove.6B.200d.txt  precess.py  readme  train.parser
joint_entity_relation/run/: command.txt  run.sh  test.sh
